# otus_homework_06_matrix

./: CMakeLists.txt  main.cpp
.github/workflows/: release.yml
lib/: CMakeLists.txt
lib/helper/: CMakeLists.txt  helper.cpp  helper.h
lib/matrix/: CMakeLists.txt  matrix.h
test/: CMakeLists.txt  test.cpp
